# kn

./: Cargo.toml  LICENSE  README.md  install-kn.sh  install.sh  package.json  uninstall.sh
.github/workflows/: ci.yml  release.yml
src/: agents.rs  cli_parser.rs  command_utils.rs  config.rs  config_schema.rs  detect.rs  display.rs  main.rs  parse.rs  runner.rs  storage.rs  style.rs  test.rs  update_checker.rs  utils.rs  version.rs
src/command/: agent.rs  alias.rs  analyze.rs  clean.rs  clean_install.rs  cli.rs  completion.rs  doctor.rs  execute.rs  history.rs  info.rs  install.rs  list.rs  mod.rs  parallel.rs  run.rs  size.rs  stats.rs  uninstall.rs  upgrade.rs  upgrade_self.rs  view.rs  watch.rs
src/tests/: cli.rs  detect.rs  mod.rs  package.rs  utils.rs
src/tests/commands/: agent.rs  execute.rs  install.rs  mod.rs  uninstall.rs  upgrade.rs
test-project/: index.js  package.json
