[package]
name = "kn"
version = "0.2.0"
readme = "README.md"
edition = "2021"
description = "Minimal, blazing fast Node.js package manager and scripts runner"
authors = ["wangsizhu0504@outlook.com"]
keywords = ["package-manager", "npm", "yarn", "pnpm", "scripts"]
license = "MIT"
homepage = "https://github.com/wangsizhu0504/kn"
repository = "https://github.com/wangsizhu0504/kn"

[[bin]]
name = "kn"
path = "src/main.rs"

[dependencies]
# Error handling
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

dirs = "5.0.1"
rust-ini = "0.20.0"
serde = { version = "1.0.193", features = ["derive", "default"] }
serde_json = { version = "1.0.108", features = ["preserve_order"] }
inquire = "0.6.2"
indexmap = { version = "2.1.0", features = ["serde"] }
console = "0.15"
indicatif = "0.17"
ureq = { version = "2.9", features = ["json"] }

[dev-dependencies]

[target."cfg(unix)".dependencies]
rustix = { version = "1.1.3", features = ["fs"] }

[target."cfg(windows)".dependencies]
winsafe = { version = "0.0.24", features = ["kernel"] }

# 编译优化配置
[profile.release]
opt-level = 3     # 最高优化级别
lto = "thin"      # 链接时优化
codegen-units = 1 # 更好的优化
strip = true      # 移除调试符号
panic = "abort"   # 减小二进制大小

[profile.dev]
opt-level = 0 # 快速编译
debug = true  # 调试信息

# 优化依赖项编译速度
[profile.dev.package."*"]
opt-level = 2 # 依赖项使用中等优化
